add rose gold block/nugget, piglin compat, interop

--- a/src/main/resources/assets/shadow_refinery/lang/en_us.json
+++ b/src/main/resources/assets/shadow_refinery/lang/en_us.json
@@ -1,8 +1,4 @@
 {
-  "item.shadow_refinery.flour": "Flour",
-  "item.shadow_refinery.dough": "Dough",
-  "item.shadow_refinery.bread_slice": "Slice of Bread",
-  "item.shadow_refinery.yeast": "Yeast",
   "item.shadow_refinery.rose_gold_ingot": "Rose Gold Ingot",
   "item.shadow_refinery.rose_gold_sword": "Rose Gold Sword",
   "item.shadow_refinery.rose_gold_shovel": "Rose Gold Shovel",
@@ -12,5 +8,8 @@
   "item.shadow_refinery.rose_gold_helmet": "Rose Gold Helmet",
   "item.shadow_refinery.rose_gold_chestplate": "Rose Gold Chestplate",
   "item.shadow_refinery.rose_gold_leggings": "Rose Gold Leggings",
-  "item.shadow_refinery.rose_gold_boots": "Rose Gold Boots"
+  "item.shadow_refinery.rose_gold_boots": "Rose Gold Boots",
+  "item.shadow_refinery.rose_gold_nugget": "Rose Gold Nugget",
+  "block.shadow_refinery.rose_gold_block": "Block of Rose Gold",
+  "item.shadow_refinery.rose_gold_block": "Block of Rose Gold"
 }
